@@ -8,6 +8,9 @@ ChangeLog for wpa_supplicant
 	* fixed the OpenSSL patches (0.9.8g and 0.9.9) for EAP-FAST to
 	  allow fallback to full handshake if server rejects PAC-Opaque
 	* added fragmentation support for EAP-TNC
+	* added support for parsing PKCS #8 formatted private keys into the
+	  internal TLS implementation (both PKCS #1 RSA key and PKCS #8
+	  encapsulated RSA key can now be used)
 
 2008-02-22 - v0.6.3
 	* removed 'nai' and 'eappsk' network configuration variables that were
